# AlphaEdge

./: .dockerignore  .gitattributes  .gitignore  PLAN.md  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  vercel.json
.github/workflows/: ci.yml  deploy-pages.yml
alpha_model/data/: build_features.py  build_targets.py  download_factors.py  download_macro.py  download_prices.py  download_universe.py
alpha_model/evaluation/: evaluate.py
alpha_model/model/: __init__.py  alpha_model.py  cross_mixer.py  patch_tst.py  prediction_head.py  static_encoder.py
alpha_model/training/: colab_train.ipynb  train_patchtst.py  train_patchtst_v2.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  orchestrator.py  prompts.py  tools.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: analysis.py  backtest.py  websocket.py
backend/app/backtest/: engine.py
backend/app/core/: circuit_breaker.py  hallucination_guard.py  observability.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/analysis/: macro.py  risk.py  valuation.py
backend/app/services/data/: fred_service.py  yahoo_finance.py
backend/app/services/llm/: nemotron_client.py
backend/app/services/prediction/: inference.py
backend/app/services/search/: brave_search.py  brightdata_reddit.py
backend/tests/: conftest.py
backend/tests/test_services/: test_analysis.py  test_backtest.py  test_brave.py  test_circuit_breaker.py  test_inference.py  test_model.py  test_nemotron.py  test_yahoo.py
docs/: vercel_deployment.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
scripts/: generate_agentic_flow_diagram.py  generate_fincast_eval_graphs.py
test_apis/: test_apis.py
(+13 files in other folders)
