[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bam-backend"
version = "0.1.0"
description = "BAM: Bloomberg AI Multi-Agent Investment Committee"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.5.0",
    # Agent orchestration
    "langgraph>=0.3.0,<0.4",
    "langchain-core>=0.3.0,<0.4",
    "langchain-community>=0.3.0",
    # LLM client (NVIDIA Nemotron via OpenAI-compatible API)
    "openai>=1.0.0",
    # HTTP client
    "httpx>=0.27.0",
    # Redis
    "redis[hiredis]>=5.0.0",
    # Observability
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    # Alpha model (inference on M1 CPU)
    "torch>=2.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # Data sources
    "yfinance>=0.2.36",
    "fredapi>=0.5.0",
    "waybackpy>=3.0.0",
    "beautifulsoup4>=4.12.0",
    # Sentiment
    "trafilatura>=1.12.0",
    # Data validation
    "pandera>=0.20.0",
    "cachetools>=5.3.0",
    # ML
    "hmmlearn>=0.3.2",
    # Time-series foundation model
    "chronos-forecasting>=1.4.0",
    # Env
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]
dev = [
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: tests that require live API keys and external services",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
